@@ -4,6 +4,7 @@ Revision history for AM-Algorithm
     Stopped printing to amcpresults and terminal
     Switched to Log::Any
     Added Algorithm::AM::Result module
+    Removed separate support for "short" and "long" outcomes
 2.45      2014-02-11 21:27:02 America/Los_Angeles
     Fixed gang/grandtotal calculation bugs
     removed debug print statements!
